# vip-rs

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  vip.rs
